# pylegends

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-Jupyter  Dockerfile-Spark  Makefile  README.md  docker-compose.yaml  entrypoint.sh  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: mkdocs.yaml
config/: connections.json  spark-defaults-dev.conf  spark-defaults.conf  variables.json  webserver_config.py
iac/terraform/: variables.tf
infrastructure/docker/: dockerfile
infrastructure/kubernetes/: pod.yaml
infrastructure/terraform/: cluster.tf  organization.tf  project.tf  provider.tf  terraform.tfstate
jobs/: job_riot.py
pylegends/: processing.py
pylegends/common/: mongodb.py  version.py
pylegends/dash/: app.py
pylegends/etl/champs/: extract.py  load.py  transform.py
pylegends/etl/items/: extract.py  load.py  transform.py
pylegends/etl/mastery/: extract.py  join.py  load.py  transform.py
pylegends/tasks/: task_champs.py  task_items.py  task_mastery.py
pylegends/utils/: config.py
spark/: spark_task_submit.py
